--- a/client/platforms/android/assets/www/index.html
+++ b/client/platforms/android/assets/www/index.html
@@ -27,7 +27,7 @@
 <script src="js/app.js"></script>
 <script src="js/account.js"></script>
 <script src="js/dev.js"></script>
-<script src="js/home.js"></script>
+<script src="js/tap.js"></script>
 <script src="js/login.js"></script>
 <script src="js/register.js"></script>
 
