--- a/client/www/index.html
+++ b/client/www/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Loopback Ionic Example</title>
+    <title>Commuter</title>
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <!-- custom css -->
     <link href="css/style.css" rel="stylesheet">
 </head>
-<body ng-app="looper">
+<body ng-app="commuter">
 <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
     <ion-nav-back-button class="button-icon ion-arrow-left-c">
     </ion-nav-back-button>
@@ -26,8 +26,8 @@
 <!-- your app's js -->
 <script src="js/app.js"></script>
 <script src="js/account.js"></script>
-<script src="js/dev.js"></script>
-<script src="js/home.js"></script>
+<script src="js/topup.js"></script>
+<script src="js/tap.js"></script>
 <script src="js/login.js"></script>
 <script src="js/register.js"></script>
 
