--- a/client/www/index.html
+++ b/client/www/index.html
@@ -32,8 +32,9 @@
 <script src="js/register.js"></script>
 
 <script src="lib/ionic/js/angular/angular-resource.js"></script>
-<!--<script src="lib/lb-services.js"></script>-->
+<!--LOOPBACK-->
 <script src="lib/loopback-services.js"></script>
+<!--DATE-->
 <script src="lib/bd.timedistance.js"></script>
 
 <!--STRIPE-->
