--- a/client/www/index.html
+++ b/client/www/index.html
@@ -44,6 +44,8 @@
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script src="bower_components/angular-stripe-checkout/angular-stripe-checkout.js"></script>
 <script src="js/services/stripeservices.js"></script>
-
+<!--NFC-->
+<script src="js/services/nfcfilters.js"></script>
+<script src="js/services/nfcservices.js"></script>
 </body>
 </html>
